# immobilier

./: .gitignore  README.md  WEBAPP.md  app.js  config.js  index.html  style.css  votes.js
backend/: .env.example  agences.yaml  agences.yaml.example  pyproject.toml  requirements-scrapers.txt  requirements.txt
backend/app/: __init__.py  agences_config.py  config.py  db.py  main.py  models.py  scheduler.py  schemas.py
backend/app/enrichment/: __init__.py  base.py  densite.py  dvf.py  fibre.py  georisques.py  gpu.py  hiking.py  pollution.py  rail.py  relief.py  socio.py
backend/app/routers/: filter_sets.py  listings.py  saved_listings.py  saved_searches.py  search.py  sources.py
backend/app/services/: agences_ingest.py  agences_parsers.py  alerts.py  brief.py  classify.py  dedup.py  departements.py  email_ingest.py  enrich.py  export_static.py  extract.py  filters.py  filtersets.py  gares.py  geo.py  geo_communes.py  preferences.py  quality.py  scoring.py  search.py
backend/data/: communes_socio.csv  fibre_communes.json  gares.csv  infra_cache.json  poi_cache.json
backend/scripts/: build_age_dataset.py  build_socio_dataset.py
backend/tests/: conftest.py  test_agences.py  test_agences_parsers.py  test_api.py  test_bienici.py  test_classify.py  test_db.py  test_dedup.py  test_email_ingest.py  test_enrichment.py  test_export_static.py  test_extract.py  test_geo_communes.py  test_html_sources.py  test_leboncoin.py  test_notaires.py  test_pappers_mapping.py  test_paruvendu.py  test_preferences.py  test_quality.py  test_scoring.py  test_scripts.py  test_subsets.py
(+31 files in other folders)
